TP8-Tavarifun/tests/bad/t04.ml
(* Incohérence INT vs UNIT *)
if true then 3 else print_int 3 ;;
